Added service configurations for self-service components.

--- a/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/all.yaml
+++ b/ucsschool-basis-pilot-ansible/ansible/inventories/sample/group_vars/all.yaml
@@ -5,7 +5,7 @@ ansible_ssh_pass: "univention"
 upgrade_version: "5.0-5"
 update_server: "updates.software-univention.de"
 
-# Vars are overridden by default, so keep them in a 'global' dict here.
+# Vars are replaced by default, so keep them in a 'global' dict here.
 # Whenever a task needs global *and* per-host config, it can include both
 # vars files and *MUST* merge the needed variables.
 global:
